--- a/VictorKrogh.NET.Model.ModelBuilder/VictorKrogh.NET.Model.ModelBuilder.csproj
+++ b/VictorKrogh.NET.Model.ModelBuilder/VictorKrogh.NET.Model.ModelBuilder.csproj
@@ -17,4 +17,8 @@
 	  </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="VictorKrogh.NET.Extensions.Linq" Version="6.1.0" />
+  </ItemGroup>
+
 </Project>
